@@ -30,6 +30,8 @@ $parents = {
     'wxCheckBox' => 'wxControl',
     'wxCheckListBox' => 'wxListBox',
     'wxChoice' => 'wxControlWithItems',
+    'wxChoicebook' => 'wxControl',
+    'wxChoicebookEvent' => 'wxNotifyEvent',	
     'wxClient' => 'wxObject',
     'wxClientDC' => 'wxWindowDC',
     'wxClipboard' => 'wxObject',
@@ -157,6 +159,8 @@ $parents = {
     'wxLayoutAlgorithm' => 'wxObject',
     'wxLayoutConstraints' => 'wxObject',
     'wxList' => 'wxObject',
+    'wxListbook' => 'wxControl',
+    'wxListbookEvent' => 'wxNotifyEvent',	
     'wxListBox' => 'wxControlWithItems',
     'wxListCtrl' => 'wxControl',
     'wxListEvent' => 'wxNotifyEvent',
