@@ -5,6 +5,7 @@
 - Made more RadioBox methods virtual (thanks to Roy Sutton)
 - Split RadioBox#show_item, to match wxPython
 - Added ScreenDC (Sean Long)
+- Added ChoiceBook and ChoiceBookEvent (Sean Long)
 
 
 ====0.0.28 tag included all of this:===
